--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -61,6 +61,21 @@ body {
   a[href*="facebook"] {
     display: none;
   }
+  a[href*="explore"]{
+    display: none;
+  }
+  a[href*="about"]{
+    display: none;
+  }
+}
+
+
+.eproms-image {
+  display: block;
+}
+
+.tnth-image {
+  display: none;
 }
 
 #socialMediaRegistrationContainer {
@@ -1111,6 +1126,20 @@ div.input-group.date {
   .tnth-form .form-group > label {
     font-size: 13px;
   }
+
+  .eproms-image {
+    display: none;
+  }
+
+  #fullSizeBox {
+    position: relative;
+    margin: 0 -20px;
+    text-align: left;
+    background-image: url('../img/twoMen_sm.jpg');
+    background-size: cover;
+    background-position: center top;
+    overflow: hidden;
+ }
 
   .profile-item-container {
   padding: 1em;
