--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -49,6 +49,14 @@ body {
   font-size: @baseFontSize;
 }
 
+.eproms-image {
+  display: none;
+}
+
+.tnth-image {
+  display: block;
+}
+
 #mainHolder {
   visibility: hidden;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
