--- a/portal/templates/flask_user/login.html
+++ b/portal/templates/flask_user/login.html
@@ -13,7 +13,8 @@
 </style>
 
 <div id="fullSizeBox" class="box-min-500">
-    <img src="{{ url_for('static', filename='img/twoMen.jpg') }}" class="img-responsive hidden-xs" />
+    <img class="eproms-image" src="{{ url_for('static', filename='img/twoMen.jpg') }}" class="img-responsive hidden-xs" />
+    <img class="tnth-image" src="{{ url_for('static', filename='img/bg_canoe.jpg') }}" class="img-responsive hidden-xs" />
 
     <div id="fullSizeContainer">
 
