--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -28,6 +28,14 @@ body {
   font-size: 18px;
 }
 
+.eproms-image {
+  display: none;
+}
+
+.tnth-image {
+  display: block;
+}
+
 #mainHolder {
   visibility: hidden;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
