--- a/portal/templates/initial_queries.html
+++ b/portal/templates/initial_queries.html
@@ -46,7 +46,7 @@
             <br />
         {% else %}
           <br/>
-          <p> Thank you for your registration.</p>
+          <p> Thank you for registering.</p>
           <p>Click continue to start using TrueNTH</p>
         {% endif %}
     <button id="updateProfile" type="submit" class="btn btn-lg btn-tnth-primary" disabled>Continue to TrueNTH</button>
