--- a/portal/templates/landing.html
+++ b/portal/templates/landing.html
@@ -8,21 +8,16 @@
         background: none;
     }
 </style>
-<div id="fullSizeBox" class="box-min-400">
-    <img  src="{{ url_for('static', filename='img/bg_canoe.jpg') }}" class="tnth-image img-responsive hidden-xs" />
-    <img  src="{{ url_for('static', filename='img/twoMen.jpg') }}" class="eproms-image img-responsive hidden-xs" />
-
+<div id="fullSizeBox" class="box-min-500">
+    <img  src="{{ url_for('static', filename='img/spacer.jpg') }}" class="tnth-image img-responsive hidden-xs" style="visibility:hidden"/>
     <div id="fullSizeContainer">
 
         <div class="text-center"><a href="/"><img id="fullSizeLogo" src="{{ url_for('static', filename='img/logo_wordmark.png') }}" alt="TrueNTH" /></a></div>
 
         <div id="wellContainer">
-
             <div class="tnth-splash">
-
                 <div id="wellContent">
-
-                    <div class="headline">
+                  <div class="headline">
                         <div style="margin-bottom: 1em">{{ app_text('landing title') }}</div>
                         {{ app_text('landing sub-title') }}
                     </div>
@@ -32,14 +27,16 @@
                 <div class="tnth-splash-bottom">
                     <a href="/explore" class="tnth-splash-bottom-link"><span class="hidden-xs">Explore How This Works</span><span class="hidden-sm hidden-md hidden-lg">Explore</span></a><span class="tnth-splash-bottom-link separator"></span><a href="/about" class="tnth-splash-bottom-link"><span class="hidden-xs">Learn About TrueNTH</span><span class="hidden-sm hidden-md hidden-lg">Learn</span></a>
                 </div>
-
             </div>
-
         </div>
-
-
     </div>
 
 </div>
 
 {% endblock %}
+{% block document_ready %}
+    $("document").ready(function() {
+        $("#fullSizeBox").closest("div.col-lg-12").css("padding", "0");
+    });
+{% endblock %}
+
