--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -49,14 +49,6 @@ body {
   font-size: @baseFontSize;
 }
 
-.eproms-image {
-  display: none;
-}
-
-.tnth-image {
-  display: block;
-}
-
 #mainHolder {
   visibility: hidden;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
@@ -233,12 +225,17 @@ a.btn {
 }
 // fullsize background image box - used on homepage and similar pages
 #fullSizeBox {
-  position:relative;
-  margin: 0 -15px;
+  position: relative;
   text-align: left;
+  left:0;
+  top:0;
+  margin:0;
   background-image: url('../img/bg_canoe.jpg');
   background-size: cover;
   background-position: center top;
+  overflow: hidden;
+  max-width: 100%;
+  height:100%;
   &.box-min-500 {
     min-height: 500px;
   }
@@ -323,7 +320,7 @@ a.btn {
 }
 #wellContent {
   position: absolute;
-  top: 50%;
+  top: 45%;
   left: 50%;
   // TODO - Add browser specific styles, check compatibility
   transform: translate(-50%, -50%);
@@ -1183,8 +1180,6 @@ div.input-group.date {
     top: -2px;
   }
 
-
-
 }
 
 @media (max-width: 730) {
@@ -1199,8 +1194,9 @@ div.input-group.date {
     height: 135px;
   }
   #fullSizeBox {
-    background-image: none;
-    min-height: auto;
+    /*background-image: none;
+    min-height: auto;*/
+    height: 700px;
     > img {
       width: 100%;
     }
