--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -212,6 +212,9 @@ a.btn {
   overflow: hidden;
   max-width: 100%;
   height:100%;
+  -webkit-transition: height 0.8s ease-in;
+  -moz-transition: height 0.8s ease-in;
+  transition: height 0.8s ease-in;
 }
 
 #fullSizeBox.box-min-500 {
@@ -1145,7 +1148,7 @@ div.input-group.date {
   #fullSizeBox {
     /*background-image: none;*/
     /*min-height: auto;*/
-    height:800px;
+    /*height:700px;*/
   }
   #fullSizeBox > img {
     width: 100%;
@@ -1164,7 +1167,7 @@ div.input-group.date {
   }
   .tnth-splash .headline {
     font-weight: bold;
-    font-size: 28px;
+    font-size: 1.2em;
     margin-bottom: 1em;
   }
   .tnth-splash .feature-btn-primary {
@@ -1289,6 +1292,12 @@ div.input-group.date {
   }
   .btn-set .btn {
     margin-bottom: 0.5em;
+  }
+}
+
+@media(max-width: 1300px) {
+  #fullSizeBox {
+    height: 680px;
   }
 }
 @media (min-width: 1400px) {
