add validation to date field in procedures section in profile

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -1249,11 +1249,12 @@ div.input-group.date {
   }
 
   #profileProcedureContainer #tnthproc {
-    width: 50%;
+    max-width: 95%;
   }
 
   #profileProcedureContainer div.input-group.date {
-    width: 50%;
+    width: 60%;
+    max-width: 100%;
   }
 
 }
