--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1073,6 +1073,15 @@ div.input-group.date {
   margin-top:-2px;
 }
 
+#profileProcedureContainer #tnthproc {
+  max-width: 95%
+}
+
+#profileProcedureContainer div.input-group.date {
+  width: 60%;
+  max-width: 100%;
+}
+
 
 /** Responsive sizes **/
 @media (max-width: 480px) {
