Adding mechanism to configure display of macros from config variable.

--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -773,10 +773,10 @@
                         </div>
 
                             <div>
-                                {{profileEthnicity(person)}}
+                                {{profileEthnicity(person)|show_macro('ethnicity')}}
                             </div>
                             <div>
-                                {{profileRace(person)}}
+                                {{profileRace(person)|show_macro('race')}}
                             </div>
                     </div>
                 </div>
