initial 18n baseline + cellphone translation

--- a/portal/templates/profile_test.html
+++ b/portal/templates/profile_test.html
@@ -104,7 +104,7 @@ My TrueNTH Profile
             <div class="help-block with-errors"></div>
         </div>
         <div class="form-group float-input-label">
-            <label for="phone">{{ app_text('Cellphone') }} <span class="text-muted smaller-text">(Optional)</span></label>
+            <label for="phone">{{ _("CELLPHONE") }} <span class="text-muted smaller-text">(Optional)</span></label>
             <input type="text" class="form-control" id="phone" name="phone" value="{{ user.phone if user.phone }}">
         </div>
 
